--- a/portainer.yml
+++ b/portainer.yml
@@ -1,9 +1,10 @@
-version: "3.2"
+version: '3.2'
+
 services:
   agent:
     image: portainer/agent
     environment:
-    AGENT_CLUSTER_ADDR: task_agent
+      AGENT_CLUSTER_ADDR: tasks.agent
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
@@ -14,11 +15,10 @@ services:
       placement:
         constraints: [node.platform.os == linux]
 
-
   portainer:
     image: portainer/portainer:1.24.2
-    command: -H tcp://task.agent:9001 --tlsskipverify
-    ports: 
+    command: -H tcp://tasks.agent:9001 --tlsskipverify
+    ports:
       - "9000:9000"
       - "8000:8000"
     volumes:
