add swarm setting

--- a/aqidb.yml
+++ b/aqidb.yml
@@ -13,10 +13,13 @@ services:
             MYSQL_ROOT_PASSWORD: 1234
         volumes:
             - /var/lib/docker/volumes/mysql/_data:/var/lib/mysql
+        deploy:
+            mode: replicated
+            replicas: 1
+            placement: 
+                constraints: [node.labels.mysql == true]
         networks:
             - aqi_net
-
-        
 
 
     phpmyadmin:
@@ -27,6 +30,11 @@ services:
             - "8000:80"
         depends_on:
             - mysql
+        deploy:
+            mode: replicated
+            replicas: 1
+            placement: 
+                constraints: [node.labels.mysql == true]
         networks:
             - aqi_net
 
