--- a/crawler.yml
+++ b/crawler.yml
@@ -2,12 +2,17 @@ version: "3.0"
 
 services:
   data_crawler:
-    image: pl3w/crawler:1.0.4
+    image: crawler:1.0.5
     hostname: "aqi"
     command: pipenv run python src/aqidata/crawler.py
     # restart: always
     environment:
       - TZ=Asia/Taipei
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement: 
+          constraints: [node.labels.crawler_aqi == true]
     networks:
       - aqi_net
 
