--- a/aqidb.yml
+++ b/aqidb.yml
@@ -8,8 +8,8 @@ services:
             - 3306:3306
         environment:
             MYSQL_DATABASE: aqidb
-            MYSQL_USER: pl3w #postgres
-            MYSQL_PASSWORD: Pbw101031 #1234
+            MYSQL_USER: pl3w 
+            MYSQL_PASSWORD: Pbw101031 
             MYSQL_ROOT_PASSWORD: 1234
         volumes:
             - /var/lib/docker/volumes/mysql/_data:/var/lib/mysql
@@ -28,6 +28,11 @@ services:
             - mysql:db
         ports:
             - "8000:80"
+        environment:
+            MYSQL_USER: pl3w
+            MYSQL_PASSWORD: Pbw101031
+            MYSQL_ROOT_PASSWORD: 1234
+            PMA_HOST: mysql
         depends_on:
             - mysql
         deploy:
