--- a/aqidb.yml
+++ b/aqidb.yml
@@ -8,9 +8,9 @@ services:
             - 3306:3306
         environment:
             MYSQL_DATABASE: aqidb
-            MYSQL_USER: pl3w 
-            MYSQL_PASSWORD: Pbw101031 
-            MYSQL_ROOT_PASSWORD: 1234
+            MYSQL_USER:  #User
+            MYSQL_PASSWORD: #Password
+            MYSQL_ROOT_PASSWORD: #Root password
         volumes:
             - /var/lib/docker/volumes/mysql/_data:/var/lib/mysql
         deploy:
@@ -29,9 +29,9 @@ services:
         ports:
             - "8000:80"
         environment:
-            MYSQL_USER: pl3w
-            MYSQL_PASSWORD: Pbw101031
-            MYSQL_ROOT_PASSWORD: 1234
+            MYSQL_USER: #User
+            MYSQL_PASSWORD: #Password
+            MYSQL_ROOT_PASSWORD: #Root password
             PMA_HOST: mysql
         depends_on:
             - mysql
